fixing overflow in sections

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -139,3 +139,8 @@ form.example::after {
 #myBtn:hover {
   background-color: grey;
 }
+
+section {
+  max-height: 100%;
+  overflow: auto;
+}
